# jwo-cv

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.dev.yml  compose.override.yml  compose.prod.yml  compose.yml  config.prod.toml  config.toml  poetry.toml  pyproject.toml  requirements-hashed.txt  requirements-vcs.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
jwo_cv/: __main__.py  action_classifier.py  action_detector.py  action_recognizer.py  api.py  app_keys.py  config.dev.toml  config.prod.toml  detectors.py  info.py  item_classifier.py  item_detector.py  shop_event.py  shopping_event.py  utils.py  video_client_api.py  vision.py
jwo_cv/config/: config.dev.toml  config.prod.toml  config.toml
scripts/: export-requirements-for-docker.sh  export-requirements.sh
