[tool.poetry]
name = "jwo-cv"
version = "0.1.0"
description = "Computer Vision component of Just-Walk-Out Shopping System"
authors = ["Ha Phi Hung <haphihung55@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
opencv-python = "^4.9.0.80"
Flask = "^3.0.3"
toml = "^0.10.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
