[tool.poetry]
name = "jwo-cv"
version = "0.1.0"
description = "Computer Vision component of Just-Walk-Out Shopping System"
authors = [
    "Ha Phi Hung <haphihung55@gmail.com>",
    "Le Quang Trung <LeTrung8522@gmail.com>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
opencv-python = "^4.9.0.80"
toml = "^0.10.2"
ultralytics = "^8.2.2"
torch = "^2.2.2"
torchvision = "^0.17.2"
movinet-pytorch = { git = "https://github.com/Atze00/MoViNet-pytorch.git" }
python-socketio = {extras = ["client"], version = "^5.11.2"}
aiortc = "^1.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pre-commit = "^3.7.0"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
