[tool.poetry]
name = "jwo-cv"
version = "0.1.0"
description = "Computer Vision component of the Just-Walk-Out Shopping System"
authors = [
    "Ha Phi Hung <haphihung55@gmail.com>",
    "Le Quang Trung <LeTrung8522@gmail.com>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
toml = "^0.10.2"
opencv-python-headless = "^4.10.0.84"
torch = "^2.3.1"
torchvision = "^0.18.1"
ultralytics = "^8.2.48"
movinet-pytorch = { git = "https://github.com/Atze00/MoViNet-pytorch.git" }
python-socketio = { extras = ["asyncio_client"], version = "^5.11.2" }
aiortc = "^1.9.0"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pre-commit = "^3.7.1"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
